--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <main>
+        <section>
+            <h2>James Hughes Personal Website</h2>
     <a rel="stylesheet" href="Page.html">Page</a>
+    <a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a>
+    <a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a>
+</section>
+<section>
+    <h2>Personal Life</h2>
+    <img src="./Images/image1.jpeg" width="600" height="600" alt="Me (Left) and my friend Kyle at the Penn State v. Iowa Football Game" />
+    <img src="./Images/image2.jpeg" width="600" height="600" alt="Me and my Mom in Nashville, TN" />
+</section>
+
 </main>
+
 </body>
 </html>
