--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,12 @@
    
 </head>
 <body>
+    <header>
+        <h1>James Hughes' Personal Website</h1>
+    </header>
     <main>
         <section>
-            <h2>James Hughes Personal Website</h2>
+            <h2>Associated Links</h2>
     <a rel="stylesheet" href="Page.html">Page</a>
     <a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a>
     <a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a>
