--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,11 @@
     <main>
         <section>
             <h2>Associated Links</h2>
-    <a rel="stylesheet" href="Page.html">Page</a>
-    <a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a>
-    <a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a>
+            <ul></ul>
+    <li><a rel="stylesheet" href="Page.html">Page</a></li>
+    <li><a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a></li>
+    <li><a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a></li>
+</ul>
 </section>
 <section>
     <h2>Personal Life</h2>
