--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,13 @@
 <section>
     <h2>Personal Life</h2>
     <img src="./Images/image1.jpeg" width="600" height="600" alt="Me (Left) and my friend Kyle at the Penn State v. Iowa Football Game" />
+    <p>
+        This photo is of my friend Kyle (Right) and I (Left) while attending 2021's Iowa V. Penn State Football Game. Shortly after this photo was taken, we stormed the field after a top 10 victory!
+    </p>
     <img src="./Images/image2.jpeg" width="600" height="600" alt="Me and my Mom in Nashville, TN" />
+    <p> 
+        A Photo of me and my Mom taken in Nashville, TN under a mural depicting country music stars! The zoomed out photo depicts Dolly Parton!
+    </p>
 </section>
 
 </main>
