--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
     <li><a rel="stylesheet" href="Page.html">Classes I'm Enrolled In</a></li>
     <li><a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a></li>
     <li><a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a></li>
+    <li><a href="mailto:JamesHughesJJH@Gmail.com">E-Mail Me!</a></li>
 </ul>
 </section>
 <section>
