--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,9 @@
     <header>
         <h1>James Hughes' Personal Website</h1>
     </header>
+
+    <hr>
+
     <main>
         <section>
             <h2>Associated Links</h2>
@@ -22,6 +25,9 @@
     <li><a href="mailto:JamesHughesJJH@Gmail.com">E-Mail Me!</a></li>
 </ul>
 </section>
+
+<hr>
+
 <section>
     <h2>Personal Life</h2>
     <figure> 
@@ -29,17 +35,25 @@
     <figcaption> Scenes from Iowa Football 2021</figcaption>
 </figure>
     <p>
-        This photo is of my friend Kyle (Right) and I (Left) while attending 2021's Iowa V. Penn State Football Game. Shortly after this photo was taken, we stormed the field after a top 10 victory!
+        This photo is of my friend Kyle (Right) and I (Left) while attending 2021's Iowa V. Penn State Football Game. 
+        Shortly after this photo was taken, we stormed the field after a top 10 victory!
     </p>
 <figure>
     <img src="./Images/image2.jpeg" width="600" height="600" alt="Me and my Mom in Nashville, TN" />
     <figcaption> Broadway Street, Nashville, TN 2019</figcaption>
 </figure>
     <p> 
-        A Photo of me and my Mom taken in Nashville, TN under a mural depicting country music stars! The zoomed out photo depicts Dolly Parton!
+        A Photo of me and my Mom taken in Nashville, TN under a mural depicting country music stars!
     </p>
 </section>
 
+<hr>
+
+<section>
+    <h2>Upcoming Trip</h2>
+    <p>
+        This Spring Break I will be traveling to Louisville and Frankfort, KY to visit the Bourbon Trail!
+    </p>
 </main>
 
 </body>
