--- a/Index.html
+++ b/Index.html
@@ -52,9 +52,19 @@
 <section>
     <h2>Upcoming Trip</h2>
     <p>
-        This Spring Break I will be traveling to Louisville and Frankfort, KY to visit the Bourbon Trail!
+        This Spring Break I will be traveling to Louisville and Frankfort, KY to visit the Bourbon Trail! I have listed some purely informational links below.
     </p>
+</section>
+<section class="Distilleries">
+    <h2>Distilleries I am Visiting!</h2>
+    <ul>
+        <li><a href="https://www.oldforester.com/"> Old Forester </a></li>
+        <li><a href="https://www.buffalotracedistillery.com/"> Buffalo Trace </a></li>
+        <li><a href="https://www.woodfordreserve.com/"> Woodford Reserve </a></li>
+    </ul>
+</section>
 </main>
+</body>
 
 </body>
 </html>
