--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,15 @@
 <hr>
 
 <section>
+    <h2>Brief Biography</h2>
+    <p>
+Hi there! Thank you for visiting my personal website! I'm James Hughes and I am currently a senior studying Finance and Business Analytics at the University of Iowa, with an expected graduation date of May 2022. This site will be used to showcase a little about me and my interests outside of school!
+    </p>
+</section>
+
+<hr>
+
+<section>
     <h2>Personal Life</h2>
     <figure> 
     <img src="./Images/image1.jpeg" width="600" height="600" alt="Me (Left) and my friend Kyle at the Penn State v. Iowa Football Game" />
@@ -50,9 +59,26 @@
 <hr>
 
 <section>
+    <h2>Baseball</h2>
+    <p>
+       I am an avid Baseball fan who follows the Chicago Cubs very closely. One of my major interest areas has been Sabermetrics and the valuation of players based on performance statistics such as WAR, wOBA, and fWAR! Below are a few of the main sites I utilize when viewing Baseball content!
+    </p>
+</section>
+<section class="Ball">
+    <h2>Baseball Resources</h2>
+    <ul>
+        <li><a href="https://www.baseball-reference.com/"> Baseball Reference </a></li>
+        <li><a href="https://baseballsavant.mlb.com/"> Baseball Savant </a></li>
+        <li><a href="https://www.fangraphs.com/"> Fan Graphs </a></li>
+    </ul>
+</section>
+
+<hr>
+
+<section>
     <h2>Upcoming Trip</h2>
     <p>
-        This Spring Break I will be traveling to Louisville and Frankfort, KY to visit the Bourbon Trail! I have listed some purely informational links below.
+        This Spring Break I will be traveling to Louisville and Frankfort, KY to visit the Bourbon Trail! I have listed some purely informational links below. Please do not press unless you are 21 years of age or older.
     </p>
 </section>
 <section class="Distilleries">
@@ -63,6 +89,13 @@
         <li><a href="https://www.woodfordreserve.com/"> Woodford Reserve </a></li>
     </ul>
 </section>
+<section>
+    <p>I will update this section after my return from Kentucky!</p>
+</section>
+
+
+<hr>
+
 </main>
 </body>
 
