--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     <main>
         <section>
             <h2>Associated Links</h2>
-            <ul></ul>
+            <ul>
     <li><a rel="stylesheet" href="Page.html">Classes I'm Enrolled In</a></li>
     <li><a href="https://www.linkedin.com/in/james-hughes-3587aa138/"> LinkedIn </a></li>
     <li><a href="https://tippie.uiowa.edu/sites/tippie.uiowa.edu/files/documents/krause/s21_cmi.pdf"> Krause Fund Work </a></li>
@@ -89,6 +89,7 @@ Hi there! Thank you for visiting my personal website! I'm James Hughes and I am 
     </ul>
 </section>
 <section>
+    <h2>Post Trip</h2>
     <p>I will update this section after my return from Kentucky!</p>
 </section>
 
@@ -98,5 +99,4 @@ Hi there! Thank you for visiting my personal website! I'm James Hughes and I am 
 </main>
 </body>
 
-</body>
 </html>
